@@ -6,7 +6,9 @@
 
 (-) Ingo's BottomPanel improvements:
     (-) item background: randomly chosen
-    (-) background of whole panel, separators, background of energy points
+    (-) separators
+
+(-) HelpButton: second 'S' key makes the text disappear
 
 (-) viking.rb: re-enable game speed feature after the test of speed
 
